# nvmetarget

./: .gitignore  __init__py  build.sh  cleanup.sh  pyproject.toml  setup.py  status.sh  test.sh
nvmetarget/: __init__.py  _version.py  nvmelib.py
tests/: test_data.py  test_nvmelib.py
